<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/EditText_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="textImeMultiLine"/>

    <TextView
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"/>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_cream_view"
            />

        <TextView
            android:text="@string/Whipped_cream"
            android:layout_marginLeft="24dp"
            style="@style/HeaderTextStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_chokolate_view"
            />

        <TextView
            android:text="@string/chokolate"
            android:layout_marginLeft="24dp"
            style="@style/HeaderTextStyle"/>

    </LinearLayout>


    <TextView
        android:layout_marginBottom="16dp"
        android:text="@string/Quantity"
        style="@style/HeaderTextStyle"/>

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:onClick="decrement"
            android:text="-" />


        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_marginRight="8dp"
            android:text="1"
            android:textColor="@android:color/black"
            style="@style/HeaderTextStyle"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/Order" />

</LinearLayout>

</ScrollView>
